--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <link rel="stylesheet" href="style.css">
     <title>taichan-portfolio</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but taichan-portfolio doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>このサイトはJavaScriptを有効にして閲覧してください。</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
