--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="style.css">
     <title>taichan-portfolio</title>
+    <script src="get_paths.js"></script>
   </head>
   <body>
     <noscript>
